--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -21,7 +21,7 @@ jobs:
   examples:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Increase available disk space
         run: |
           # Increase available disk space by removing unnecessary tool chains:
@@ -40,7 +40,7 @@ jobs:
           CHANGED_FILES=$(git diff --name-only main..HEAD | grep "$REGEXP") || true;
           EXAMPLES_CHANGED=$([[ ! -z "$CHANGED_FILES" ]] && echo "true" || echo "false")
 
-          echo -e "CHANGED_FILES:\nCHANGED_FILES"
+          echo -e "CHANGED_FILES:\n$CHANGED_FILES"
           echo "EXAMPLES_CHANGED: $EXAMPLES_CHANGED"
           echo "::set-output name=examples_changed::$EXAMPLES_CHANGED"
 
