--- a/.github/workflows/test-package-build.yml
+++ b/.github/workflows/test-package-build.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
         with:
           python-version: "3.8"
 
@@ -59,7 +59,7 @@ jobs:
           python -c "import mlflow; print(mlflow.__version__)"
 
       - name: Store wheel
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: github.event_name == 'push'
         with:
           name: ${{ steps.build-dist.outputs.wheel-name }}
@@ -75,19 +75,16 @@ jobs:
           script: |
             const { owner, repo } = context.repo;
 
-            // For some reason, the newly-uploaded wheel in the previous step is not included.
             const artifactsResp = await github.actions.listArtifactsForRepo({
               owner,
               repo,
             });
             const wheels = artifactsResp.data.artifacts.filter(({ name }) => name.endsWith(".whl"));
 
-            // The storage usage limit for a free github account is up to 500 MB. See the page below for details:
-            // https://docs.github.com/en/github/setting-up-and-managing-billing-and-payments-on-github/about-billing-for-github-actions
-            MAX_SIZE_IN_BYTES = 300_000_000; // 300 MB
+            MAX_SIZE_IN_BYTES = 300_000_000;
 
             let index = 0;
-            let sum = parseInt(process.env.WHEEL_SIZE);  // include the newly-uploaded wheel
+            let sum = parseInt(process.env.WHEEL_SIZE);
             for (const [idx, { size_in_bytes }] of wheels.entries()) {
               index = idx;
               sum += size_in_bytes;
