--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses actions/checkout@v3
-      - uses ./.github/actions/setup-python
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-python
         with:
           python-version: "3.8"
       - uses: ./.github/actions/cache-pip
