--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: "0 45 23 ? * SUN *"
+    - cron: "42 7 * * 0"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref == "refs/heads/main" && github.run_number || github.ref }}
