fix more CI configs
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/.rstcheck.cfg
+++ b/docs/.rstcheck.cfg
@@ -1,2 +1,2 @@
 [rstcheck]
-ignore_messages=(No directive entry for "autoclass" in module|Hyperlink target)
+ignore_messages=(No directive entry for "autoclass" in module|Hyperlink target|No role entry for "py:class")
