--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
           python-version: "3.8"
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
+        env:
+          INSTALL_PROPHET_DEPS: true
+          INSTALL_PMDARIMA_DEPS: true
         run: |
           source ./dev/install-deps.sh
           pip install -r requirements/docs-requirements.txt
