--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,13 +46,11 @@ jobs:
         with:
           python-version: "3.8"
       - uses: ./.github/actions/cache-pip
-      - uses: docker://pandoc/latex:2.9
-        with:
-          args: --output=output/result.pdf ${{ steps.files_list.outputs.files }}
-      - uses: actions/upload-artifact@main
-        with:
-          name: output
-          path: output
+      - name: Install Pandoc
+        shell: bash
+        run: |
+          sudo wget https://github.com/jgm/pandoc/releases/download/2.17.1.1/pandoc-2.17.1-1-amd64.deb
+          sudo dpkg -i pandoc-2.17.1-1-amd64.deb
       - name: Install Dependencies
         env:
           INSTALL_PROPHET_DEPS: true
