--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,16 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 env:
-  CONDA_HOME: /usr/share/miniconda
+  PY_VERSION: "3.8"
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-python
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: env.PY_VERSION
       - uses: ./.github/actions/cache-pip
       - name: Install dependencies
         run: |
@@ -36,18 +36,17 @@ jobs:
           pip install -r requirements/lint-requirements.txt
       - name: Run lint checks
         run: |
-          ./dev/lint.sh
+          source ./dev/lint.sh
 
   docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-python
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: env.PY_VERSION
       - uses: ./.github/actions/cache-pip
       - name: Install Pandoc
-        shell: bash
         run: |
           sudo wget https://github.com/jgm/pandoc/releases/download/2.17.1.1/pandoc-2.17.1.1-1-amd64.deb
           sudo dpkg -i pandoc-2.17.1.1-1-amd64.deb
@@ -60,58 +59,58 @@ jobs:
           pip install -r requirements/docs-requirements.txt
       - name: Build docs
         run: |
-          ./dev/build-docs.sh
+          source ./dev/build-docs.sh
 
   pmdarima:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-python
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: env.PY_VERSION
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
           INSTALL_PROPHET_DEPS: true
           INSTALL_PMDARIMA_DEPS: true
         run: |
-          ./dev/install-deps.sh
+          source ./dev/install-deps.sh
       - name: Run tests
         run: |
-          ./dev/run-pmdarima-tests.sh
+          source ./dev/run-pmdarima-tests.sh
 
   prophet:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-python
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: env.PY_VERSION
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
           INSTALL_PROPHET_DEPS: true
           INSTALL_PMDARIMA_DEPS: true
         run: |
-          ./dev/install-deps.sh
+          source ./dev/install-deps.sh
       - name: Run tests
         run: |
-          ./dev/run-prophet-tests.sh
+          source ./dev/run-prophet-tests.sh
 
   common:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-python
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: env.PY_VERSION
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
           INSTALL_PROPHET_DEPS: true
           INSTALL_PMDARIMA_DEPS: true
         run: |
-          ./dev/install-deps.sh
+          source ./dev/install-deps.sh
       - name: Run tests
         run: |
-          ./dev/run-common-tests.sh
+          source ./dev/run-common-tests.sh
