--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $env.PY_VERSION
+          python-version: ${{ env.PY_VERSION }}
       - uses: ./.github/actions/cache-pip
       - name: Install dependencies
         run: |
