--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -46,7 +46,7 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: $env.PY_VERSION
+          python-version: ${{ env.PY_VERSION }}
 
       - name: Install dependencies
         if: ${{ github.event_name == 'schedule' || steps.check-diff.outputs.examples_changed == 'true' }}
