--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $(env.PY_VERSION)
+          python-version: ${{ env.PY_VERSION }}
       - uses: ./.github/actions/cache-pip
       - name: Install Pandoc
         run: |
@@ -67,7 +67,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $(env.PY_VERSION)
+          python-version: ${{ env.PY_VERSION }}
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
@@ -85,7 +85,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $env.PY_VERSION
+          python-version: ${{ env.PY_VERSION }}
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
@@ -103,7 +103,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $env.PY_VERSION
+          python-version: ${{ env.PY_VERSION }}
       - uses: ./.github/actions/cache-pip
       - name: Install Dependencies
         env:
