--- a/.github/workflows/test-package-build.yml
+++ b/.github/workflows/test-package-build.yml
@@ -14,7 +14,7 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 env:
-  PY_VERSION: 3.8.12
+  PY_VERSION: "3.8.12"
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: $env.PY_VERSION
+          python-version: ${{ env.PY_VERSION }}
 
       - name: Install dependencies
         run: |
