--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,10 +1,16 @@
 name: Examples
 
 on:
+  push:
+    branches:
+      - main
+      - branch-[0-9]+.[0-9]+
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - branch-[0-9]+.[0-9]+
   schedule:
-    - cron: "42 7 * * 0"
+    - cron: "42 9 */2 * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/main' && github.run_number || github.ref }}
